[package]
name = "crib"
version = "0.1.0"
authors = ["noelzubinvictor@gmail.com"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
rand = "0.9.0"
tabled = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
colored = "3.0.0"
ansi-to-tui = "7.0.0"
dirs = "6.0.0"
structopt = "0.3.26"
